--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typeorm": "0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.2.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
