--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node --require tsconfig-paths/register -r ts-node/register ./node_modules/typeorm/cli.js --config ./src/database/ormconfig.ts"
+    "typeorm2": "node --require tsconfig-paths/register -r ts-node/register ./node_modules/typeorm/cli.js --config ./src/database/ormconfig.ts",
+    "typeorm": "node --require tsconfig-paths/register -r ts-node/register ./node_modules/typeorm/cli.js -d ./src/database/datasource.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -35,7 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "0.2"
+    "typeorm": "0.3.7"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.2.0",
